UniTime GWT  - align the header messages back to the center (instead of being aligned to the left, this reverts the revision 4448)    - the reason for moving them to the left was the Scheduling Assistant (as it could display multiple enrollment messages), which no longer uses header messages (see revision 4466)

--- a/WebContent/styles/unitime.css
+++ b/WebContent/styles/unitime.css
@@ -481,26 +481,23 @@ A.unitime-Hint:link,A.unitime-Hint:visited,A.unitime-Hint:active,A.unitime-Hint:
 }
 
 .unitime-Message {
-	text-align: left;
+	text-align: center;
 	font-style: italic;
 	font-weight: normal;
-	text-align: center;
 }
 
 .unitime-WarningMessage {
 	color: orange;
-	text-align: left;
+	text-align: center;
 	font-style: italic;
 	font-weight: normal;
-	text-align: center;
 }
 
 .unitime-ErrorMessage {
 	color: red;
-	text-align: left;
+	text-align: center;
 	font-style: italic;
 	font-weight: normal;
-	text-align: center;
 }
 
 .unitime-Disabled {
